deploy/localcluster/templates/seq-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: seq-ingress
  namespace: default
spec:
  routes:                           
  - kind: Rule
    match: PathPrefix(`/seq/`)        
    services:                       
    - kind: Service
      name: seq
      namespace: default      
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: seq-ingest-ingress
  namespace: default
spec:
  routes:                           
  - kind: Rule
    match: PathPrefix(`/seqingest/`)        
    services:                       
    - kind: Service
      name: seq
      namespace: default      
      port: 5341
